--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     //Logging
     compile "com.jakewharton.timber:timber:${timberVersion}"
 
+    //Glide
+    compile "com.github.bumptech.glide:glide:${glideVersion}"
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     provided 'org.glassfish:javax.annotation:10.0-b28'
